# voice-stax

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  voicestax_custom_frontend_guide.md
blog/: SKILL.md  generate_blog.py  output.md  publish_medium.py
examples/html/: chatbot.html
voicestax/: __init__.py
voicestax/api/: app.py  websocket_routes.py
voicestax/config/: settings.py
voicestax/core/: audio_manager.py  chat_engine.py  timing.py  voice_agent.py
voicestax/providers/llm/: base.py  factory.py  groq.py
voicestax/providers/stt/: assemblyai.py  base.py  factory.py
voicestax/providers/tts/: base.py  elevenlabs.py  factory.py
voicestax/schemas/: llm_schemas.py
voicestax/session/: barge_in.py  voice_session.py
voicestax/utils/: exceptions.py  logger.py  text_processing.py
