[project]
name = "voice-stax"
version = "0.1.0"
description = "A modular voice assistant framework with support for TTS, STT, and LLM providers, enabling conversational AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai==0.50.0",
    "elevenlabs==2.31.0",
    "fastapi==0.128.4",
    "groq==1.0.0",
    "jinja2==3.1.4",
    "pyaudio==0.2.14",
    "pydantic>=2.0,<3.0",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "soundfile==0.13.1",
    "uvicorn>=0.23.2",
]
